Update to 1.21.4 & new Aergia placeholders